# Scrapy-School

./: .gitignore  README.md
first-section/: pyproject.toml
first-section/ebook_scraper/ebook_scraper/: items.py  pipelines.py
first-section/ebook_scraper/ebook_scraper/spiders/: ebook.py
practice/: pyproject.toml
practice/bookstoscrape/bookstoscrape/: items.py
practice/bookstoscrape/bookstoscrape/spiders/: ebook.py
