[tool.poetry]
name = "first-section"
version = "0.1.0"
description = ""
authors = ["Jack Perry <jack.e.perry@outlook.com>"]
readme = "README.md"
packages = [{include = "first_section"}]

[tool.poetry.dependencies]
python = "~3.9"
Scrapy = "^2.6.2"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
